force-app/main/default/objects/Products_Owned__c/Products_Owned__c.object-meta.xml
<CustomObject>
    <label>DN-US-Products Owned</label>
    <nameField>
        <displayFormat>PO-{0000000}</displayFormat>
        <label>PO#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Products Owned</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>