force-app/main/default/objects/Products_Owned__c/fields/Current_YTD_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Current_YTD_Revenue__c</fullName>
    <label>Current YTD Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>