force-app/main/default/objects/Products_Owned__c/fields/External_Products_Owned_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Products_Owned_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>External Products Owned ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>