force-app/main/default/objects/Products_Owned__c/fields/First_Purchased__c.field-meta.xml
<CustomField>
    <fullName>First_Purchased__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>First Purchased</label>
    <type>Date</type>
</CustomField>