force-app/main/default/objects/Products_Owned__c/fields/Last_MTD_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Last_MTD_Revenue__c</fullName>
    <label>Last MTD Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>