force-app/main/default/objects/Products_Owned__c/fields/Last_Purchased__c.field-meta.xml
<CustomField>
    <fullName>Last_Purchased__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Purchased</label>
    <type>Date</type>
</CustomField>