force-app/main/default/objects/Products_Owned__c/fields/Sold_By__c.field-meta.xml
<CustomField>
    <fullName>Sold_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sold By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Products_Owned</relationshipName>
    <type>Lookup</type>
</CustomField>