force-app/main/default/objects/Products_Owned__c/fields/System__c.field-meta.xml
<CustomField>
    <fullName>System__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>System</label>
    <length>48</length>
    <type>Text</type>
</CustomField>