force-app/main/default/objects/Products_Owned__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product_Segment__c</columns>
    <columns>Account__c</columns>
    <columns>First_Purchased__c</columns>
    <columns>Last_Purchased__c</columns>
    <columns>Sold_By__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>